# basealt-test-task-2025-mar

./: .clang-format  .gitignore  README.md
DataExamples/: complex_object_example.toml  invalid_object_example.toml  object_example.toml
TomlObjectViewer/: AppController.cpp  AppController.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  TreeItem.cpp  TreeItem.h  TreeItemDelegate.cpp  TreeItemDelegate.h  TreeModel.cpp  TreeModel.h  main.cpp
